--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ tonic = "0.11"
 tokio = { version = "1.36", features = ["full"] }
 clap = { version = "4.5", features = ["derive"] }
 thiserror = "1.0"
+chrono = "0.4"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 ratatui = "0.26.0"
